--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">cryptoTracker</string>
+    <string name="app_name">Rastreador De Monedas</string>
 </resources>
